--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,11 +15,6 @@ monitor=,prefered,auto,auto
 # env = GDK_SCALE,2
 # env = XCURSOR_SIZE,24
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
-
 # Start core desktop enviroment systems
 
 # start the polkit
@@ -27,7 +22,6 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # start notification daemon
 exec-once = dunst
-# later possibly mako
 
 # start udiskie for managing usb auto-mounting
 exec-once = udiskie &
@@ -41,7 +35,7 @@ exec-once = hyprpaper &
 # start the eww widgets
 exec-once = eww -c $HOME/.config/eww/bar2 open bar
 
-# start lock on idle
+# start idle daemon
 exec-once = ~/.config/hypr/scripts/idle
 
 # start discord
@@ -203,7 +197,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 # power profiles
 bind = $mainMod SHIFT, N, exec, ~/.config/eww/bar2/scripts/launch pprofile
 
-# power profiles
+# power menu
 bind = $mainMod SHIFT, M, exec, ~/.config/eww/bar2/scripts/launch pmenu
 
 # Move focus with mainMod + arrow keys
@@ -278,11 +272,8 @@ bindl = , XF86AudioNext, exec, playerctl next
 
 # volume
 bindle = , XF86AudioRaiseVolume, exec, wpctl set-volume -l "1.0" @DEFAULT_AUDIO_SINK@ 6%+
-#binde = , XF86AudioRaiseVolume, exec, ${homeDir}/.config/eww/scripts/volume osd
 bindle = , XF86AudioLowerVolume, exec, wpctl set-volume -l "1.0" @DEFAULT_AUDIO_SINK@ 6%-
-#binde = , XF86AudioLowerVolume, exec, ${homeDir}/.config/eww/scripts/volume osd
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-#bind = , XF86AudioMute, exec, ${homeDir}/.config/eww/scripts/volume osd
 bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # screenshot
