updated the idle dpms and session lock logic

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,16 +4,16 @@
 monitor=eDP-1,highres,auto,1.25
 
 # other/external monitor leave on auto
-# monitor=,3840x2160@60.000000,auto,2
-monitor=,prefered,auto,auto
+monitor=,3840x2160@60,auto,2
+# monitor=,prefered,auto,auto
 
 # xwayland scaling disabled, on 1.35 the blus is not too bad and x scaling is too much of a headache
 # sets xwayland scale
-# exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
+# exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 
 # toolkit-specific scale
 # env = GDK_SCALE,2
-# env = XCURSOR_SIZE,24
+# env = XCURSOR_SIZE,64
 
 # Start core desktop enviroment systems
 
@@ -178,6 +178,11 @@ windowrulev2 = workspace 4,class:^(WebCord)$
 windowrulev2 = float,class:^(io.github.fsobolev.Cavalier)$
 windowrulev2 = move 70% 70%,class:^(io.github.fsobolev.Cavalier)$
 windowrulev2 = pin,class:^(io.github.fsobolev.Cavalier)$
+
+# fix titanfall 2 input issue
+windowrulev2 = forceinput,class:^(gamescope)&
+
+windowrulev2 = forceinput,class:^(vrchat.exe)&
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
